syntax = "proto3";

package org.project_planton.provider.aws.awsecrrepo.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/aws/awsecrrepo/v1/spec.proto";
import "org/project_planton/provider/aws/awsecrrepo/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//aws-ecr-repo
message AwsEcrRepo {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'aws.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'AwsEcrRepo'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  AwsEcrRepoSpec spec = 4 [(buf.validate.field).required = true];

  //status
  AwsEcrRepoStatus status = 5;
}

//aws-ecr-repo status
message AwsEcrRepoStatus {
  //stack-outputs
  AwsEcrRepoStackOutputs outputs = 1;
}
